Updated to ensure that darkmode text is visible

--- a/src/app/core/navigation/navigation.component.scss
+++ b/src/app/core/navigation/navigation.component.scss
@@ -17,8 +17,7 @@ mat-toolbar {
   background-color: var(--bgColor)
 }
 
-.buttonTitle {
-  padding-top: 4px;
+.buttonText {
   color: var(--textColor);
 }
 
